deploy_generated/kubernetes/ingress.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Define the ingress for external traffic route.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fhirproxy-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sof-ingress-ip
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: fhirproxy-service
              servicePort: 8080
